# control_doc

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  eahc.mplstyle  pyproject.toml
data/: flight_dynamics_data.hdf5
data/14x/: coefficients_alpha_beta_mach.csv  coefficients_alpha_beta_mach_cg_at_x_1.2_z_0.242_v3.csv  derivatives_vs_mach.csv  derivatives_vs_mach_cg_at_x_1.2_z_0.242_v3.csv  mass_properties.csv
data/hxi/: coefficients_alpha_beta_mach.csv  derivatives_vs_mach.csv  mass_properties.csv
glossaries/: .gitignore  README.md  coefficients.tex  comum.tex  configuracaoGlossario.sty  constants.tex  control.tex  naca_coefficients.tex  parameters_vehicle.tex  siglas.tex  states.tex  updateMathSymbols.py
images/: CL_alpha.eps  CL_q.eps  Cl_p.eps  Cm_alpha.eps  Cm_q.eps  atmosfera_dados.csv  comparison_cira_with_model.eps  coordinate_system.py  draw_stages.py  fig1.tex  graphics_atmos.py  hexafly_degenarate_model.eps  qtikz  schematic_wing  variation_of_flow_over_hexafly_swept_wing_model.eps
lyx_folder/: bibliografia.bib  capa.lyx  capa_ieav.lyx  control.lyx  main_lyx.lyx  main_tex.lyx  pre_text.lyx
tex_folder/: Makefile  bibliografia.bib  capa_ieav.tex  compila.sh  control.tex  main_lyx.tex  main_tex.tex  pre_text.tex  preamble.sty  preambleLyx.sty  sub_glossaries_by_definitions.py
